# pyClimExtremes

./: .gitignore  LICENSE  TODOs.md  pyproject.toml  readme.md  things_to_complete.md
compute_backend/: __init__.py  backend_registry.py  python_backend.py  readme.md
dev/: compare_canesm_gsl.ipynb  compare_canesm_homemade.ipynb  create_thresholds.ipynb
indices/: __init__.py  base_index.py  precipitation_indices.py  registry.py  temperature_indices.py  units_utils.py
io/: data_wrapping.py  netcdf_write.py
scripts/: compute_indices.py
src/pyClimExtremes/: __init__.py
src/pyClimExtremes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pyClimExtremes/compute_backend/: __init__.py  backend_registry.py  python_backend.py  python_backend_helper_methods.py
src/pyClimExtremes/indices/: __init__.py  base_index.py  precipitation_indices.py  quantile_indices.py  registry.py  temperature_indices.py  units_utils.py
src/pyClimExtremes/io/: __init__.py  data_wrapping.py  netcdf_write.py  save_utils.py
src/pyClimExtremes/logging/: __init__.py  setup_logging.py
src/pyClimExtremes/scripts/: compute_indices.py  compute_thresholds.py
