[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyClimExtremes"
version = "0.1.0"
description = "Climate extreme indices computation package."
readme = "readme.md"
requires-python = ">=3.12"
authors = [
  { name = "Johannes Fjeldså", email = "johannlf@geo.uio.no" }
]
dependencies = [
  "numpy",
  "scipy",
  "netCDF4",
  "matplotlib",
  "xarray",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8",
  "isort",
  "mypy",
  "ipykernel",
  "cartopy",
  "nc_time_axis",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyClimExtremes*"]

[tool.black]
line-length = 79
target-version = ["py312"]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 79

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
